# TasksFastAPI

./: .gitignore  README.md  pyproject.toml  requirements.txt
Timur_Medikhanov_Task_1/: main.py
Timur_Medikhanov_Task_1/api/: __init__.py
Timur_Medikhanov_Task_1/core/: config.py  db_helper.py
Timur_Medikhanov_Task_1/migrations/: env.py
Timur_Medikhanov_Task_11/: Dockerfile  docker-compose.yml
Timur_Medikhanov_Task_11/app/: celery_config.py  main.py  tasks.py
Timur_Medikhanov_Task_12/: index.html  main.py
Timur_Medikhanov_Task_13/: docker-compose.yml  main.py
Timur_Medikhanov_Task_13/core/: config.py  redis.py
Timur_Medikhanov_Task_14/: docker-compose.yml  main.py
Timur_Medikhanov_Task_14/core/: config.py
Timur_Medikhanov_Task_15/: main.py  requirements.txt
Timur_Medikhanov_Task_15/core/: config.py
Timur_Medikhanov_Task_16/: alembic.ini  main.py
Timur_Medikhanov_Task_16/api/: __init__.py
Timur_Medikhanov_Task_16/core/: db_helper.py
Timur_Medikhanov_Task_17/: docker-compose.yml  main.py  prometheus.yml
Timur_Medikhanov_Task_18/: main.py
Timur_Medikhanov_Task_18/core/: log_config.py
Timur_Medikhanov_Task_18/utils/: fernet.py
Timur_Medikhanov_Task_19/: main.py  prestart.sh  requirements.txt
Timur_Medikhanov_Task_19/api/: __init__.py
Timur_Medikhanov_Task_19/core/: config.py  exceptions.py
Timur_Medikhanov_Task_2/: main.py
Timur_Medikhanov_Task_5/: alembic.ini
Timur_Medikhanov_Task_7/: Dockerfile  alembic.ini  docker-compose.yml  main.py
project-2-minimalist-blog/: package-lock.json
project-3-weather-app/: .gitignore
src/: .env.template  docker-compose.yml  main.py
src/api/: __init__.py
(+169 files in other folders)
